# minas

./: .gitignore  LICENSE  MANIFEST.in  README.md  VERSIONING.md  bump_version.py  pyproject.toml  setup.cfg
.github/: publish.yml  tests.yml
.github/workflows/: publish.yml  tests.yml
examples/: 01_data_creation.ipynb  02_feature_importance.ipynb  03_tuning.ipynb  04_training.ipynb  04b_graphs_matrix.ipynb  05_apply_models.ipynb
examples/apply/: apply_models_XGB.ipynb
examples/training/: predict_RF_all.ipynb  predict_XGB_all.ipynb
examples/training/models/XGB/: 20251027192110_SPLUSL_feh_01_XGB.json  20251027192857_SPLUSL_feh_02_XGB.json
examples/training/predicts/RF/: 20251013182056_SPLUSL_feh_02_RF_metrics.json  20251013190912_SPLUSL_feh_01_RF_metrics.json  20251013190912_SPLUSL_logg_01_RF_metrics.json  20251014151443_SPLUSL_feh_01_RF_metrics.json  20251014151443_SPLUSL_logg_01_RF_metrics.json  20251014171319_SPLUSL_feh_01_RF_metrics.json  20251014174921_SPLUSL_feh_02_RF_metrics.json  20251014174921_SPLUSL_logg_02_RF_metrics.json
examples/training/predicts/XGB/: 20251014180837_SPLUSL_feh_01_XGB_metrics.json  20251014180837_SPLUSL_logg_01_XGB_metrics.json  20251014181200_SPLUSL_logg_02_XGB_metrics.json  20251014181200_SPLUSL_teff_02_XGB_metrics.json  20251027192110_SPLUSL_logg_01_XGB_metrics.json  20251027192857_SPLUSL_logg_02_XGB_metrics.json  20251027192857_SPLUSL_teff_02_XGB_metrics.json
examples/tuning/: feature_import_RF.ipynb  feature_import_XGB.ipynb  tuning_RF.ipynb
exemples/apply/: apply_models_RF.ipynb  apply_models_XGB_02.ipynb
exemples/apply/data/: data_prepare.ipynb
exemples/data/: data_creation.ipynb
exemples/training/: graphs_XGB_all.ipynb  hyper
exemples/training/models/XGB/: 20251027192110_SPLUSL_logg_01_XGB.json  20251027192857_SPLUSL_logg_02_XGB.json
exemples/training/predicts/RF/: 20251013182056_SPLUSL_logg_02_RF_metrics.json  20251013182056_SPLUSL_teff_02_RF_metrics.json  20251013190912_SPLUSL_teff_01_RF_metrics.json  20251014151443_SPLUSL_teff_01_RF_metrics.json  20251014171319_SPLUSL_logg_01_RF_metrics.json  20251014171319_SPLUSL_teff_01_RF_metrics.json  20251014174921_SPLUSL_teff_02_RF_metrics.json
exemples/training/predicts/XGB/: 20251014180837_SPLUSL_teff_01_XGB_metrics.json  20251014181200_SPLUSL_feh_02_XGB_metrics.json  20251027192110_SPLUSL_feh_01_XGB_metrics.json  20251027192110_SPLUSL_teff_01_XGB_metrics.json  20251027192857_SPLUSL_feh_02_XGB_metrics.json
exemples/tuning/: tuning_XGB.ipynb
minas/: __init__.py
minas/bolometric/: magbol.py
minas/bolometric/models_bc/: model_bc_XGB.json
minas/evaluation/: __init__.py  _graphics.py  _metrics.py  feature_selection.py
minas/models/: __init__.py  _models.py  _predictors.py
minas/preprocess/: _functions.py
minas/tuning/: _tuner.py
src/minas/: __init__.py
src/minas.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/minas/bolometric/: magbol.py
src/minas/bolometric/table_XG/: 20251022184648_bc_0.9983_pred_XG.csv
src/minas/evaluation/: _graphics.py  feature_selection.py
src/minas/models/: _models.py  _predictors.py
src/minas/preprocess/: _functions.py
src/minas/tuning/: _tuner.py
tests/: test_minas.py
version/: README.md  VERSIONING.md  bump_version.py
