[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minas"
version = "1.0.0"
description = "MINAS - Machine learning for INference with Astronomical Surveys"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "icaromeidem"}]
keywords = ["astronomy", "machinelearning", "ml"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas", 
    "scikit-learn",
    "joblib",
    "tqdm",
    "seaborn",
    "matplotlib",
    "xgboost",
    "ipywidgets",
]

