[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "minas"
version     = "1.1.0"
description = "Machine-learning INtegrated Analysis with photometric Astronomical Surveys"
readme      = "README.md"
license     = {file = "LICENSE"}
requires-python = ">=3.9"

authors = [
    { name = "Icaro Meidem", email = "icarosilva@on.br" }
]

keywords = [
    "astronomy", "machine-learning", "random-forest", "xgboost",
    "photometry", "stellar-parameters", "monte-carlo", "bolometric-correction"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.21",
    "pandas>=1.5",
    "scikit-learn>=1.1",
    "joblib>=1.2",
    "tqdm>=4.60",
    "seaborn>=0.12",
    "matplotlib>=3.5",
    "xgboost>=1.7",
    "ipywidgets>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "build",
    "twine",
]

[project.urls]
Homepage      = "https://github.com/icaromeidem/minas"
Repository    = "https://github.com/icaromeidem/minas"
"Bug Tracker" = "https://github.com/icaromeidem/minas/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["minas*"]

[tool.setuptools.package-data]
minas = [
    "bolometric/models_bc/*.json",
    "bolometric/models_bc/*.sav",
    "bolometric/table_XG/*.csv",
    "bolometric/table_RF/*.csv",
    "bolometric/graphs/*.png",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100