[metadata]
name = minas
version = 1.0.0
author = icaromeidem
description = MINAS - Machine learning for INference with Astronomical Surveys
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords = astronomy machinelearning ml
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.8
install_requires =
    numpy
    pandas
    scikit-learn
    joblib
    tqdm
    seaborn
    matplotlib
    xgboost
    ipywidgets